# stellar-tip-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: build.yml
bot/: index.js  package-lock.json  package.json
telegram_registry_contract/: Cargo.toml
telegram_registry_contract/src/: lib.rs  test.rs
tip_processor_contract/: Cargo.toml
tip_processor_contract/src/: lib.rs  test.rs
tip_processor_contract/test_snapshots/test/: test_tip_processing.1.json
web/: .gitignore  next.config.mjs  package-lock.json  package.json
web/components/: Freighter.js
web/html/: index.html
web/html/plugins/themify-icons/: themify-icons.css
web/pages/: index.js
web/pages/api/: register.js  webhook (1).js  webhook.js
