[workspace]
resolver = "2"
members = [
    "telegram_registry_contract",
    "tip_processor_contract",
]

[workspace.dependencies]
soroban-sdk = "26"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true